--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
+@font-face {
+    font-family: "Press Start";
+    src: url("assets/PrStart.ttf");
+}
+
 body {
     background-color: #696771;
+    font-size: 16px;
+    font-family: "Press Start", sans-serif;
 }
 
 #title-container {
@@ -12,7 +19,39 @@ body {
     display: flex;
     justify-content: center;
     justify-content: space-evenly;
+    max-width: 100vw;
     color: #1d1e17;
+}
+
+#timer{
+    display: none;
+    background-color: #fff;
+    padding: 16px;
+    margin: 16px;
+}
+
+#score-counter{
+    display: none;
+    background-color: #fff;
+    padding: 16px;
+    margin: 16px;
+}
+
+#start-button-container {
+    display: flex;
+    justify-content: center;
+}
+
+#start-button{
+    font-family: "Press Start", sans-serif;
+    font-size: 16px;
+    transition-duration: 0.4s;
+    border-radius: 16px;
+    padding: 16px;
+}
+
+#start-button:hover {
+    background-color: #e6c300;
 }
 
 #arena-container {
