--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 #title-container {
     display: flex;
     justify-content: center;
-    color: #1d1e17;
+    color: #000000;
 }
 
 #header-container {
@@ -20,7 +20,7 @@ body {
     justify-content: center;
     justify-content: space-evenly;
     max-width: 100vw;
-    color: #1d1e17;
+    color: #000000;
 }
 
 #timer{
@@ -32,6 +32,7 @@ body {
     border-radius: 16px;
     border-color: #800000;
     border-width: 6px;
+    color: #000000;
 }
 
 #score-counter{
@@ -59,6 +60,7 @@ body {
     border-color: #800000;
     border-width: 6px;
     padding: 16px;
+    color: #000000;
 }
 
 #start-button:hover {
@@ -73,7 +75,7 @@ body {
 
 #arena {
     background-color: white;
-    box-shadow: 10px 10px 15px black;
+    box-shadow: 10px 10px 15px #000000;
     width: 60%;
 }
 
@@ -106,11 +108,11 @@ body {
 
 #end-game-popup p {
     font-size: 24px;
-    color: #1d1e17;
+    color: #000000;
 }
 
 #credits-container {
     display: flex;
     justify-content: center;
-    color: #1d1e17;
+    color: #000000;
 }
