--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,14 @@ body {
   display: flex;
   justify-content: center;
   color: #000000;
+  font-size: 32px;
 }
 
 #header-container {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   justify-content: space-evenly;
+  width: 80%;
   max-width: 100vw;
   color: #000000;
 }
@@ -82,7 +84,7 @@ body {
   display: none;
   position: fixed;
   top: 40%;
-  left: 50%;
+  left: 40%;
   transform: translate(-50%, -50%);
   width: 40%;
   max-width: 600px;
@@ -114,4 +116,29 @@ body {
   display: flex;
   justify-content: center;
   color: #000000;
+}
+
+#keyboard-inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  border-style: solid;
+  border-radius: 16px;
+  border-color: #800000;
+  border-width: 6px;
+  padding: 16px;
+  margin: 16px;
+}
+
+#keyboard-inputs h4, li{
+  font-size: 20px;
+  padding: 4px;
+  margin: 27px;
+  justify-content: center;
+}
+
+#wasd-photo{
+  width: 15vw;
+  height: 15vh;
 }
